--- a/styles/basic.css
+++ b/styles/basic.css
@@ -7,3 +7,35 @@ body {
   font-family: "Roboto", sans-serif;
   background-color: var(--bg-main);
 }
+
+a {
+  text-decoration: none;
+  color: unset;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+p,
+h1,
+h2 {
+  margin: 0;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 970px;
+  padding: 0 10px;
+}
+
+.divider {
+  max-width: 420px;
+  width: 100%;
+  height: 1px;
+  background-color: var(--color-black);
+  border: none;
+  margin: 0 auto;
+}
