--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,7 +2,7 @@
   --bg-main: #fff;
   --bg-main-grey: #f6f6f6;
 
-  --font-color-grey: #544d4d;
+  --font-color-grey: #5d5757;
 
   --color-black: #070707;
 }
